# Controller-Manager

./: CMakeLists.txt  Makefile
src/: Main.cpp  MainState.cpp  MainState.hpp  Palette.hpp
src/sdl/: sdl_boiler.cpp
src/ui/: Label.cpp  Label.hpp  Menu.cpp  Menu.hpp
